[gd_scene load_steps=14 format=2]

[ext_resource path="res://lvl1.gd" type="Script" id=1]
[ext_resource path="res://back.png" type="Texture" id=2]
[ext_resource path="res://Position2D.gd" type="Script" id=3]
[ext_resource path="res://Position3.gd" type="Script" id=4]
[ext_resource path="res://note1.tscn" type="PackedScene" id=5]
[ext_resource path="res://note2.tscn" type="PackedScene" id=6]
[ext_resource path="res://note3.tscn" type="PackedScene" id=7]
[ext_resource path="res://Area2D.gd" type="Script" id=8]
[ext_resource path="res://lvl1.png" type="Texture" id=9]
[ext_resource path="res://end note.gd" type="Script" id=10]

[sub_resource type="GDScript" id=1]

script/source = "extends Position2D

onready var note2 = load(\"res://note2.tscn\")

func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	pass

func loop():
	pass

func _process(delta):
	# Called every frame. Delta is time since last frame.
	# Update game logic here.
	if get_parent().get_node(\"end note\").status2:
		randomize()
		var rand = rand_range(50,150)
		var simpanLok = note2.instance()
		simpanLok.speed = rand
		print(simpanLok.speed)
		add_child(simpanLok)
		get_parent().get_node(\"end note\").status2=false
	pass
"

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 77.2727, 89 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 503.48, 10 )

[node name="Node2D" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 400.003, 352.499 )
scale = Vector2( 0.482723, 0.48545 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 152.0
margin_top = 12.0
margin_right = 192.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Position1" type="Position2D" parent="." index="2"]

position = Vector2( 295, -12 )
script = ExtResource( 3 )

[node name="Position2" type="Position2D" parent="." index="3"]

position = Vector2( 406, -51 )
script = SubResource( 1 )

[node name="Position3" type="Position2D" parent="." index="4"]

position = Vector2( 516, -13 )
script = ExtResource( 4 )

[node name="note1" parent="." index="5" instance=ExtResource( 5 )]

position = Vector2( 294, 127 )

[node name="note2" parent="." index="6" instance=ExtResource( 6 )]

position = Vector2( 409, -179 )

[node name="note3" parent="." index="7" instance=ExtResource( 7 )]

position = Vector2( 520, -115 )

[node name="Area2D" type="Area2D" parent="." index="8"]

editor/display_folded = true
position = Vector2( 0, -4 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 8 )

[node name="A" type="Sprite" parent="Area2D" index="0"]

position = Vector2( 292, 683.001 )
scale = Vector2( 0.318471, 0.235967 )
texture = ExtResource( 9 )
_sections_unfolded = [ "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="1"]

position = Vector2( 292.5, 686.619 )
scale = Vector2( 0.66, 0.221529 )
shape = SubResource( 2 )

[node name="end note" type="Area2D" parent="." index="9"]

editor/display_folded = true
position = Vector2( 293, 907 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="end note" index="0"]

position = Vector2( 110.5, 19 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_Area2D_area_entered"]

[connection signal="area_entered" from="end note" to="end note" method="_on_end_note_area_entered"]


